--- a/administracao/templates/administracao/tarefas_agendadas.html
+++ b/administracao/templates/administracao/tarefas_agendadas.html
@@ -10,9 +10,16 @@
 
 {% block content %}
 
-  <span class="titulo">{{ titulo }}</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
-  <div>Agora: {{ agora }}</div><br>
+  <div>
+    <span lang="pt">Agora:</span>
+    <span lang="en">Now:</span>
+    {{ agora }}
+  </div><br>
 
   <table>
     <thead>
@@ -67,8 +74,13 @@
   </table>
 
   <br>
-  <div> A informação do ETA é o horário estimado para a execução da tarefa, porém a informação não parece estar alinhada com os relógios disponíveis.</div>
-  <div> Quando uma tarefa é cancelada, ela é removida da fila de tarefas agendadas e não será executada.
-        Porém ela vai continuar sendo visível nessa lista até que o worker a remova. </div>
+  <div lang="pt">A informação do ETA é o horário estimado para a execução da tarefa, porém a informação não parece estar alinhada com os relógios disponíveis.</div>
+  <div lang="en">The ETA information is the estimated time for the task to be executed, however the information does not seem to be aligned with the available clocks.</div>
 
+  <div lang="pt"> Quando uma tarefa é cancelada, ela é removida da fila de tarefas agendadas e não será executada.
+        Porém ela vai continuar sendo visível nessa lista até que o worker a remova. </div>
+  <div lang="en"> When a task is canceled, it is removed from the scheduled tasks queue and will not be executed.
+        However, it will continue to be visible in this list until the worker removes it. </div>
+
+  {% include "linguas.html" %}
 {% endblock %}
