--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -11,17 +11,17 @@
   {% include "tabelas_includes.html" %}
 
   <style>
-    ul, ol {
+    .grupo {
       padding-left: 0;
       list-style-type: none;
     }
 
-    ul li, ol li {
+    .grupo li {
       position: relative;
       padding-left: 0.75em;
     }
   
-    ul li::before, ol li::before {
+    .grupo li::before {
       position: absolute;
       content: '\2022';
       left: 0;
@@ -31,143 +31,122 @@
 {% endblock %}
 
 {% block content %}
+
   {% include "impressora.html" %}
-  <span class="titulo">{{ titulo }}
+
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
     {% if user.tipo_de_usuario == 4 %}
       <small class="esconder">
-        <a
-          class="open-documento" style="cursor:pointer;"
-          data-url="{% url 'adiciona_documento' %}"
-          >&#10133;</a
-        >
+        <a class="open-documento" style="cursor:pointer;"
+           data-url="{% url 'adiciona_documento' %}"
+           >&#10133;</a>
       </small>
     {% endif %}
   </span>
+
   {% include "edicoes.html" with com_cursos=True %}
   {% include "informacoes.html" %}
   <br><br>
   
   <div class="atualizar">
 
-    <div class="table-responsive">
-
-      <table id="ProjetosTable" class="table table-bordered table-hover table-sm" style="width: auto;">
-
-        <thead class="table-info">
-          <tr>
-            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Projeto</span></th>
-            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Estudantes</span></th>
-            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Orientador</span></th>
-            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Período</span></th>
-            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Organização</span></th>
-            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Banca Final</span></th>
-            <th scope="col" style="text-align: center;width:auto;"><span style="margin-right: 0.6ex;">Documentos</span></th>
-          </tr>
-        </thead>
-        <tbody>
-        {% for projeto in projetos %} 
-            <tr class="item">
-              <td>
-                <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}"
-                  data-toggle="tooltip" data-html="true" animation="true" 
-                  title="
-                    {% for alocacao in projeto.alocacao_set.all %}
-                        &bull; {{alocacao.aluno.user.get_full_name}}
-                        ({{alocacao.aluno.curso2}}){% if not forloop.last %}<br>{% endif %}
-                    {% endfor %}
-                  "
-                >
-                  {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
-                    {{projeto.titulo_final}}
-                    <span class="tit_ori">
-                      <br><small>Título original da proposta: {{projeto.proposta.titulo}}</small>
-                    </span>
-                  {% else %}
-                    {{projeto.get_titulo}}
-                  {% endif %}
-                  {% include "tipo_projeto.html" %}
-                </a>
-              </td>
-              
-
-              <!-- Estudantes -->
-              <td style="min-width:18em;">
-                <small>
-                <ul class="grupo">
-                  {% for alocacao in projeto.alocacao_set.all %}
-                    <li>
-                      <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">
-                        {{alocacao.aluno}}
-                      </a>
-                      <span class="curso">
-                        [{{ alocacao.aluno.curso2 }}]
+    {% include "tabelas_top_ml.html" with tabela="Projetos" cabecalhos=cabecalhos %}
+          {% for projeto in projetos %} 
+              <tr class="item">
+                <td>
+                  <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">
+                    {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
+                      {{projeto.titulo_final}}
+                      <span class="tit_ori">
+                        <br><small>Título original da proposta: {{projeto.proposta.titulo}}</small>
                       </span>
-                    </li>
-                  {% endfor %}
-                </ul>
-                </small>
-              </td>
-
-              <!-- Orientador -->
-              <td>
-                {% if projeto.orientador %}
-                  <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
-                    {{ projeto.orientador }}
+                    {% else %}
+                      {{projeto.get_titulo}}
+                    {% endif %}
+                    {% include "tipo_projeto.html" %}
                   </a>
-                {% else %}
-                  ORIENTADOR NÃO DEFINIDO
-                {% endif %}
-
-                {% with coorientadores=projeto.coorientador_set.all %}
-                  {% if coorientadores %}
-                  <span class="coorientadores">
-                  <br>coorientação:
-                    {% for coorientador in coorientadores %}
-                        <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
-                          {{coorientador.usuario.get_full_name}} 
-                        </a>
-                        {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
-                        {% if not forloop.last %}; {% endif %}
-                    {% endfor %}
-                    </span>
-                  {% endif %}
-                {% endwith %}
-              </td>
-
-              <!-- Período -->
-              <td style="text-align:center">
-                  {{projeto.ano}}.{{projeto.semestre}}
-              </td>
-
-              <!-- Organização -->
-              <td>
-                {% if projeto and projeto.organizacao %}
-                  <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">
-                    {{ projeto.organizacao.sigla }}
-                  </a>
-                {% else %}
-                  ORGANIZAÇÃO NÃO DEFINIDA
-                {% endif %}
-              </td>
-
-              <!-- Somente Banca Final, as outras não são listadas -->
-              <td>
-                <small>
-                <ul class="grupo">
-                {% for banca in projeto.banca_set.all %}
-                  {% if banca.tipo_de_banca == 0 %}
-                    {% for membro in banca.membros %}
-                      <li><a class="imprimir" href="{% url 'user_detail' membro.id %}">{{membro.get_full_name}} </a></li>
-                    {% endfor %}
-                  {% endif %}
-                {% endfor %}
-                </ul>
-                </small>
-              </td>
-              
-              <!-- Documentos -->
-              <td  style="text-align:left;min-width:18em;"><small>
+                </td>
                 
+
+                <!-- Estudantes -->
+                <td style="min-width:18em;">
+                  <small>
+                  <ul class="grupo">
+                    {% for alocacao in projeto.alocacao_set.all %}
+                      <li>
+                        <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">
+                          {{alocacao.aluno}}
+                        </a>
+                        <span class="curso">
+                          [{{ alocacao.aluno.curso2 }}]
+                        </span>
+                      </li>
+                    {% endfor %}
+                  </ul>
+                  </small>
+                </td>
+
+                <!-- Orientador -->
+                <td>
+                  {% if projeto.orientador %}
+                    <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
+                      {{ projeto.orientador }}
+                    </a>
+                  {% else %}
+                    ORIENTADOR NÃO DEFINIDO
+                  {% endif %}
+
+                  {% with coorientadores=projeto.coorientador_set.all %}
+                    {% if coorientadores %}
+                    <span class="coorientadores">
+                    <br>coorientação:
+                      {% for coorientador in coorientadores %}
+                          <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
+                            {{coorientador.usuario.get_full_name}} 
+                          </a>
+                          {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
+                          {% if not forloop.last %}; {% endif %}
+                      {% endfor %}
+                      </span>
+                    {% endif %}
+                  {% endwith %}
+                </td>
+
+                <!-- Período -->
+                <td style="text-align:center">
+                    {{projeto.ano}}.{{projeto.semestre}}
+                </td>
+
+                <!-- Organização -->
+                <td>
+                  {% if projeto and projeto.organizacao %}
+                    <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">
+                      {{ projeto.organizacao.sigla }}
+                    </a>
+                  {% else %}
+                    ORGANIZAÇÃO NÃO DEFINIDA
+                  {% endif %}
+                </td>
+
+                <!-- Somente Banca Final, as outras não são listadas -->
+                <td>
+                  <small>
+                  <ul class="grupo">
+                  {% for banca in projeto.banca_set.all %}
+                    {% if banca.tipo_de_banca == 0 %}
+                      {% for membro in banca.membros %}
+                        <li><a class="imprimir" href="{% url 'user_detail' membro.id %}">{{membro.get_full_name}} </a></li>
+                      {% endfor %}
+                    {% endif %}
+                  {% endfor %}
+                  </ul>
+                  </small>
+                </td>
+              
+                <!-- Documentos -->
+                <td  style="text-align:left;min-width:18em;"><small>
                   {% for documento in projeto.documento_set.all %} 
                     {% if documento.confidencial %}
                       <span class="confidencial">
@@ -176,67 +155,56 @@
                       <span class="publico">
                       <i style="font-size: 0.8em;" data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
                     {% endif %}
-
                     {% if documento.documento and documento.link %}
-                      
-                        {{documento.tipo_documento}}
-                        <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
-                        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
-                        {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                          <sup>(Inglês)</sup>
-                        {% endif %}
+                      {{documento.tipo_documento}}
+                      <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+                      <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
+                      {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                        <sup>(Inglês)</sup>
+                      {% endif %}
                       <br>
                     {% else %}
                       {% if documento.documento %}
-                        
-                          <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
-                          {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                            <sup>(Inglês)</sup>
-                          {% endif %}
+                        <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
+                        {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                          <sup>(Inglês)</sup>
+                        {% endif %}
                         <br>
                       {% endif %}
                       {% if documento.link %}
-                        
-                          <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
-                          {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                            <sup>(Inglês)</sup>
-                          {% endif %}
+                        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
+                        {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                          <sup>(Inglês)</sup>
+                        {% endif %}
                         <br>
                       {% endif %}
                     {% endif %}
-                    
-                    
-                      </span>
-                    
-                  {% endfor %}
-                  
-
+                  </span>
+                {% endfor %}
               </small></td>
             </tr>
-          
-        {% endfor %}
-          </tbody>
+          {% endfor %}
+        </tbody>
       </table>
-
     </div>
-
-    <script>
-      function carrega_pagina() {
-        // Esconde a coluna de Período se a edição não for "todas"
-        if($("#ProjetosTable th").length > 0) {   // Verifica se os THs foram registrados primeiro
-          table = $("#ProjetosTable").dataTable();
-          if(table) {table.fnSetColumnVis( 3, !($("#filterEdicao").val()!="todas" ));}  // esconde Período
-        }
-      };
-      function carrega_site() {
-        {% include "edicao_puxar_local_ou_versao.js" %}
-        carrega_pagina();
-      };
-      window.onload = carrega_site
-    </script>
-
   </div>
+
+  <script>
+    function carrega_pagina() {
+      // Esconde a coluna de Período se a edição não for "todas"
+      if($("#ProjetosTable th").length > 0) {   // Verifica se os THs foram registrados primeiro
+        table = $("#ProjetosTable").dataTable();
+        if(table) {table.fnSetColumnVis( 3, !($("#filterEdicao").val()!="todas" ));}  // esconde Período
+      }
+    };
+    function carrega_site() {
+      {% include "edicao_puxar_local_ou_versao.js" %}
+      carrega_pagina();
+    };
+    window.onload = carrega_site
+  </script>
   
-  {% include "edicoes_ajax.html" with tabela='Projetos' com_cursos=True %}
+  {% include "edicoes_ajax.html" with tabela="Projetos" com_cursos=True %}
+  {% include "linguas.html" %}
   
 {% endblock %}
