--- a/documentos/templates/documentos/tabela_imagens.html
+++ b/documentos/templates/documentos/tabela_imagens.html
@@ -14,26 +14,25 @@
 
 {% block content %}
 
-  <span class="titulo">{{ titulo }}
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
     {% if user.tipo_de_usuario == 4 %}
       <small class="esconder">
-        <a
-          class="open-documento" style="cursor:pointer;"
-          data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
-          >&#10133;</a
-        >
+        <a class="open-documento" style="cursor:pointer;"
+           data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
+           >&#10133;</a>
       </small>
     {% endif %}
   </span>
-  <br>
 
   <div class="table-responsive">
     <table id="AtasTable" class="table-bordered table-sm">
       <thead class="table-info">
         <tr>
-          <th onclick="sort('#AtasTable', '.item', 'td:nth-child(1)')">Data</th>
-          <th>Anotação</th>
-          <th>Documento</th>
+          <th onclick="sort('#AtasTable', '.item', 'td:nth-child(1)')"><span lang="pt">Data</span><span lang="en">Date</span></th>
+          <th><span lang="pt">Anotação</span><span lang="en">Annotation</span></th>
+          <th><span lang="pt">Documento</span><span lang="en">Document</span></th>
         </tr>
       </thead>
       <tbody>
@@ -76,5 +75,6 @@
   {% if user.tipo_de_usuario == 4 %}
     {% include "documento-modal.html" %}
   {% endif %}
+  {% include "linguas.html" %}
 
 {% endblock %}
