--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -82,7 +82,7 @@
                   var peso_indiv = 0;
                 </script>
                 {% for aval, nota, peso, descr in aluno.get_notas|dict_key:ano_semestre %} <!-- Notas -->
-                    <span style="background-color:#EEF;" data-toggle="tooltip" data-html="true" animation="true" 
+                    <span data-toggle="tooltip" data-html="true" animation="true" 
                     title="{{descr}}">
                       {{aval}}<span class="pesos_aval">({% widthratio peso 1 100 %}%)</span
                       >={% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
